Project

General

Profile

Actions

Bug #20045

closed

rgw_file: cannot delete bucket w/uxattrs

Added by Matt Benjamin almost 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If a setattr (e.g., chown) has been performed on a bucket, then like any directory it has a hidden object storing its attributes. This must be deleted before attempting bucket delete, otherwise, actually empty buckets will not be removable via NFS.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #20144: jewel: rgw_file: cannot delete bucket w/uxattrsResolvedNathan CutlerActions
Copied to rgw - Backport #20145: kraken: rgw_file: cannot delete bucket w/uxattrsRejectedActions
Actions #1

Updated by Matt Benjamin almost 7 years ago

  • Status changed from In Progress to Pending Backport
Actions #2

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20144: jewel: rgw_file: cannot delete bucket w/uxattrs added
Actions #3

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20145: kraken: rgw_file: cannot delete bucket w/uxattrs added
Actions #4

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF