rgw_file: remove hidden uxattr objects from buckets on delete

If a setattr (e.g., chown) has been performed on a bucket, then like
any directory it has a hidden object storing its attributes. This must
be deleted before attempting bucket delete, otherwise, actually empty
buckets will not be removable via NFS.

Fixes: http://tracker.ceph.com/issues/20045

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>
(cherry picked from commit 01e15c3ec6cf43a7a7c4e2d13aad5f385c9f9748)

Conflicts:
        src/rgw/rgw_file.cc (jewel does not have
                "inline int valid_fs_bucket_name()" and
                "inline int valid_fs_object_name()")